Fixed menu on IE11

--- a/docroot/themes/custom/themekit/sass/paragraphs/_link.scss
+++ b/docroot/themes/custom/themekit/sass/paragraphs/_link.scss
@@ -17,6 +17,9 @@
       }
       @include breakpoint(marge) {
         @include btn(ghost);
+        @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+          border: 0 solid;
+        }
       }
     }
   }
