--- a/docroot/themes/custom/themekit/sass/regions/_header.scss
+++ b/docroot/themes/custom/themekit/sass/regions/_header.scss
@@ -310,33 +310,33 @@
               &:last-child {
                 margin-right: 0;
               }
-
-              @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-                /* IE10+ CSS styles go here */
-                min-width: 180px;
-                width: 180px;
-              }
             }
+            @media (max-width: 800px) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+              /* IE10+ CSS styles go here */
+              min-width: 180px;
+              width: 180px;
+            }
+
             @include breakpoint(large) {
               min-width: 240px;
               margin-right: 40px;
-
-              @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-                /* IE10+ CSS styles go here */
-                min-width: 240px;
-                width: 240px;
-              }
             }
+            @media (max-width: $global-width) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+              /* IE10+ CSS styles go here */
+              min-width: 240px;
+              width: 240px;
+            }
+
             @include breakpoint(xlarge) {
               min-width: 260px;
               margin-right: 40px;
-
-              @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-                /* IE10+ CSS styles go here */
-                min-width: 260px;
-                width: 260px;
-              }
             }
+            @media (max-width: 1200px) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+              /* IE10+ CSS styles go here */
+              min-width: 260px;
+              width: 260px;
+            }
+
             > span {
               display: none;
             }
